# BigEye

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  secrets.env
.github/workflows/: build_back.yml  build_front.yml
backend/: .flake8  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  serve.py
backend/bigeye/: __init__.py  config.py  errors.py
backend/bigeye/auth/: __init__.py
backend/bigeye/models/: __init__.py  challenge.py  user.py
backend/bigeye/resources/: challenge.py  user.py
backend/bigeye/schemas/: schemas.py
backend/bigeye/templates/: confirm-email.html
backend/migrations/versions/: 0e6ae3b3ec68_.py  557da25b46fc_initial_migration.py  8042d80517c4_.py  8173dca333df_.py  8381a85f0dc2_.py  efc084f6919c_.py
backend/wsgi/: uwsgi.ini  wsgi.py
conf/: apache.conf  php.ini  vhost.conf
frontend/: .editorconfig  Dockerfile  Dockerfile.prod  apps.conf  docker-compose.yml  package-lock.json  package.json
frontend/conf/: apache.conf  vhost.conf
frontend/src/: bootstrap4-neon-glow.css  challenge.html  index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/assets/: particlesjs.json
frontend/src/environments/: environment.prod.ts
src/: index.html  index.php
src/app/: Challenge.php  ChallengeManager.php  Config.php  autoload.php
src/app/langs/: en.json
src/app/models/: Database.php
src/app/views/: Views.php  login.html  register.html
src/app/web/components/: API.php  (+5 more)
src/public/: .htaccess  challenge.php  index.php
src/public/css/: challenge.css  global.css
(+52 files in other folders)
